--- a/src/app/pages/user-pages/user-pages.component.html
+++ b/src/app/pages/user-pages/user-pages.component.html
@@ -1,1 +1,46 @@
-<p>user-pages works!</p>
+<div nz-row>
+  <div nz-col nzSpan="7">
+    <div class="inner-content">
+      <img nz-col nzSpan="24" [src]="'assets/image/profile.jpg'" alt="" [style.borderRadius]="'16px'">
+      <h2 style="font-weight: bold;margin-top: 20px; margin-right: 1px">Kongratbayev Nurzhan Sakenuly</h2>
+      <div style=" margin-top: 3px;">
+        <h4 style="font-weight: bold; margin-top: 3px; margin-bottom: 2px" class="mb-2">{{'About me'}}</h4>
+        <div>
+          <p style="margin-top: 0; margin-bottom: 0">{{ 'Gender:' }} <span>{{ 'Male' }}</span></p>
+        </div>
+        <div style="margin-top: 2px; margin-bottom: 2px">
+          <p style="margin-top: 0; margin-bottom: 0">{{'Lives: '}} <span>{{ 'Almaty' }}</span></p>
+        </div>
+      </div>
+
+      <div style="margin-top: 3px;" >
+        <h4 style="font-weight: bold;margin-top: 10px; margin-bottom: 0;">{{'Contacts'}}</h4>
+        <div>
+          <p class="mb-0 mt-0">{{'Phone:'}} <span>{{ '+7 777 777 7777' }}</span></p>
+        </div>
+        <div>
+          <p class="mb-0 mt-2">{{'Email: '}} <a [href]="'mailto:kongratbaev.77.7@gmail.com'">kongratbaev.77.7@gmail.com</a></p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div nz-col nzSpan="16" nzOffset="1">
+    <div class="inner-content">
+      <h2 style="font-weight: bold;">Courses</h2>
+      <h4 style="font-weight: bold;">Course Title</h4>
+      <nz-steps [nzCurrent]="current" nzSize="small">
+        <nz-step nzTitle="Lecture"></nz-step>
+        <nz-step nzTitle="Practice"></nz-step>
+        <nz-step nzTitle="H/W"></nz-step>
+        <nz-step nzTitle="Quiz"></nz-step>
+      </nz-steps>
+
+      <h2 style="font-weight: bold; margin-top: 30px">Lab Results</h2>
+      <nz-progress [nzPercent]="30" nzStatus="exception"></nz-progress>
+      <nz-progress [nzPercent]="50" nzStatus="active"></nz-progress>
+      <nz-progress [nzPercent]="100"></nz-progress>
+      <nz-progress [nzPercent]="70"></nz-progress>
+    </div>
+  </div>
+</div>
