--- a/src/app/pages/user-pages/user-pages.component.html
+++ b/src/app/pages/user-pages/user-pages.component.html
@@ -2,7 +2,7 @@
   <div nz-col nzSpan="7">
     <div class="inner-content">
       <img nz-col nzSpan="24" [src]="'assets/image/profile.jpg'" alt="" [style.borderRadius]="'16px'">
-      <h2 style="font-weight: bold;margin-top: 20px; margin-right: 1px">Kongratbayev Nurzhan Sakenuly</h2>
+      <h2 style="font-weight: bold;margin-top: 20px; margin-right: 1px">Kongratbayev Nurzhan</h2>
       <div style=" margin-top: 3px;">
         <h4 style="font-weight: bold; margin-top: 3px; margin-bottom: 2px" class="mb-2">{{'About me'}}</h4>
         <div>
