--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,16 @@
-<div class="inner-content">
-  <p>dashboard works!</p>
+<div class="card-container">
+  <nz-tabset [nzTabPosition]="'top'" [nzType]="'card'">
+    <nz-tab [nzTitle]="tabs[0]">
+      <nz-carousel nzAutoPlay>
+        <div nz-carousel-content *ngFor="let index of array">
+          <h3>{{ index }}</h3>
+        </div>
+      </nz-carousel>
+    </nz-tab>
+    <nz-tab [nzTitle]="tabs[1]">
+        <div>
+          <h3>{{ 'Statistics' }}</h3>
+        </div>
+    </nz-tab>
+  </nz-tabset>
 </div>
