login register page css (fix)

--- a/src/app/pages/course/course-view/course-view.component.html
+++ b/src/app/pages/course/course-view/course-view.component.html
@@ -1,1 +1,42 @@
-<p>course-view works!</p>
+<div class="container">
+  <img id="clip" src="assets/image/profile.jpg" alt=""/>
+</div>
+
+<!--<img nz-col nzSpan="24" style="width: 100%" [src]="'assets/image/profile.jpg'" alt="">-->
+
+
+<!--<div class="inner-content">-->
+<!--  <h2 style="font-weight: bold;margin-top: 20px; margin-right: 1px">Kongratbayev Nurzhan</h2>-->
+<!--  <div style=" margin-top: 3px;">-->
+<!--    <h4 style="font-weight: bold; margin-top: 3px; margin-bottom: 2px" class="mb-2">{{'About me'}}</h4>-->
+<!--    <div>-->
+<!--      <p style="margin-top: 0; margin-bottom: 0">{{ 'Gender:' }} <span>{{ 'Male' }}</span></p>-->
+<!--    </div>-->
+<!--    <div style="margin-top: 2px; margin-bottom: 2px">-->
+<!--      <p style="margin-top: 0; margin-bottom: 0">{{'Lives: '}} <span>{{ 'Almaty' }}</span></p>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--  <div style="margin-top: 3px;" >-->
+<!--    <h4 style="font-weight: bold;margin-top: 10px; margin-bottom: 0;">{{'Contacts'}}</h4>-->
+<!--    <div>-->
+<!--      <p class="mb-0 mt-0">{{'Phone:'}} <span>{{ '+7 777 777 7777' }}</span></p>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--      <p class="mb-0 mt-2">{{'Email: '}} <a [href]="'mailto:kongratbaev.77.7@gmail.com'">kongratbaev.77.7@gmail.com</a></p>-->
+
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--<div nz-row>-->
+<!--  <div nz-col nzSpan="7">-->
+<!--  </div>-->
+<!--  <div nz-col nzSpan="16" nzOffset="1">-->
+<!--    <div class="inner-content">-->
+<!--      <h2 style="font-weight: bold;">Courses</h2>-->
+<!--      <h4 style="font-weight: bold;">Course Title</h4>-->
+
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
