--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -69,12 +69,20 @@ nz-header {
   box-shadow: 0 1px 4px rgba(0,21,41,.08);
 }
 
-nz-content {
+router-outlet {
   margin: 24px;
+  overflow: initial;
 }
 
 .inner-content {
   padding: 24px;
   background: #fff;
   height: 100%;
+}
+
+nz-sider {
+  overflow: auto;
+  height: 100%;
+  position: fixed;
+  left: 0;
 }
